# aa-proxy-rs

./: Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: docker-image.yml
contrib/: S93aa-proxy-rs  config.toml  injector.sh
src/: aoa.rs  bluetooth.rs  config.rs  config_types.rs  ev.rs  io_uring.rs  led.rs  lib.rs  main.rs  mitm.rs  usb_gadget.rs  usb_stream.rs  web.rs
src/protos/: ev.proto  protos.proto
static/: config.json  index.html
