[package]
name = "aa-proxy-rs"
authors = ['Mariusz Białończyk']
version = "0.9.2"
edition = "2021"
license = 'GPL-2.0'
description = 'AndroidAuto wired/wireless proxy'
documentation = 'https://github.com/manio/aa-proxy-rs'
readme = 'README.md'
categories = ['command-line-utilities']
homepage = 'https://github.com/manio/aa-proxy-rs'
repository = 'https://github.com/manio/aa-proxy-rs'
default-run = "aa-proxy-rs"

[dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
bluer = { version = "0.17.3", features = ["full"] }
futures = "0.3.31"
kobject-uevent = "0.1.1"
netlink-sys = "0.8.6"
protobuf = "3.7.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-fd = "0.3.0"
tokio-uring = "0.5.0"
mac_address = "1.1.7"
bytesize = "1.3.0"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
clap = { version = "4.5.37", features = ["derive"] }
humantime = "2.1.0"
log = "0.4.22"
simple_config_parser = "1.0.0"
netif = "0.1.6"
openssl = { version = "0.10", features = ["vendored"] }
nusb = { git = "https://github.com/kevinmehall/nusb" }
thiserror = "2.0.12"
byteorder = "1.5.0"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3" }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
toml_edit = "0.22"
chrono = "0.4.41"
hex = "0.4.3"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
anyhow = "1.0.99"
shell-words = "1.1.0"
nix = { version = "0.30", features = ["signal", "process"] }

[build-dependencies]
protoc-bin-vendored = "3.1.0"
protobuf-codegen = "3.7.1"

[[bin]]
name = "generate_config"
path = "src/bin/generate_config.rs"
